--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,17 +3,26 @@ on:
   pull_request:
     branches:
       - develop
-
 jobs: 
   check-application:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        go: ['1.18', '1.19']
     steps:
       - uses: actions/checkout@v2
+
       - uses: actions/setup-go@v2
         with: 
-          go-version: ${{ matrix.go }}
+          go-version: 1.19
+          
       - run: go test
       - run: go run math.go
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v3
+        with:
+          push: false
+          tags: eltunb/ci-testing:latest
