--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,22 +7,35 @@ jobs:
   check-application:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - 
+        uses: actions/checkout@v2
 
-      - uses: actions/setup-go@v2
+      - 
+        uses: actions/setup-go@v2
         with: 
           go-version: 1.19
           
-      - run: go test
-      - run: go run math.go
+      - 
+        run: go test
+      - 
+        run: go run math.go
 
-      - name: Set up QEMU
+      - 
+        name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
+      - 
+        name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Build and push
+      - 
+        name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }} 
+      - 
+        name: Build and push
         id: docker_build
         uses: docker/build-push-action@v3
         with:
-          push: false
+          push: true
           tags: eltunb/ci-testing:latest
